Fix tweet text flowing out of the container box

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -44,6 +44,7 @@
   display: flex;
   border: none;
   width: 95%;
+  word-break: break-all;
 }
 
 .tweet-footer {
